for some reason iOS is shitting the bed on the .navbar-toggle unless it gets fixed dimensions
BS3 commit 64efa8603662bc5af55e79db61e747b6788f2a0d

--- a/docs/assets/css/todc-bootstrap.css
+++ b/docs/assets/css/todc-bootstrap.css
@@ -2874,8 +2874,10 @@ li.list-group-header {
 .navbar-toggle {
   top: 2px;
   right: 10px;
+  width: 34px;
+  height: 24px;
   padding: 4px 5px;
-  background-color: #444;
+  background-color: transparent;
   background-image: none;
   border: 1px solid #222;
   -webkit-box-shadow: none;
