--- a/less/navbar.less
+++ b/less/navbar.less
@@ -87,10 +87,12 @@
 .navbar-toggle {
   top: 2px;
   right: 10px;
+  width: 34px;
+  height: 24px;
   padding: 4px 5px;
   // .navbar-vertical-align(26px); // Vertically center in navbar
   // #gradient > .vertical(@start-color: #f5f5f5, @end-color: #f1f1f1);
-  background-color: #444;
+  background-color: transparent;
   background-image: none;
   border: 1px solid #222;
   .box-shadow(none);
